# Car-Management

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py
app/application/: __init__.py
app/application/services/: __init__.py  audit_decorator.py  audit_log_service.py  auth_service.py  combo_service.py  decorators.py  hop_dong_service.py  khach_hang_service.py  kho_service.py  khuyen_mai_scheduler.py  khuyen_mai_service.py  navigation_registry.py  nhan_vien_service.py  nhap_kho_service.py  permission_service.py  (+5 more)
app/domain/: __init__.py
app/infrastructure/: __init__.py  pdf_renderer.py
app/presentation/: __init__.py
app/shared/: __init__.py  constants.py  db_utils.py  logger.py
docs/: BUSINESS_REQUIREMENTS.md  DATABASE_PLAN.md  PLAN.md  STAKEHOLDERS.md  TASK.md  TECH_STACK.md  UI_UX_PLAN.md
resources/qss/: apple_light.qss
resources/templates/: contract.css  contract.html
scripts/: backup_db.py
tests/: __init__.py  conftest.py  test_auth_service.py  test_auth_ui.py  test_check_constraints.py  test_combo_service.py  test_fk_restrict.py  test_g2_3_navigation.py  test_hop_dong_service.py  test_khach_hang_service.py  test_kho_service.py  test_khuyen_mai_service.py  test_migration.py  test_nhan_vien_service.py  test_permission_service.py  test_seed.py  test_smoke.py  test_uat_g2_3_manual.py  test_uat_manual.py  test_xe_service.py
(+74 files in other folders)
